Added a section to the standalone export which shows the command-line needed to run standalone on this machine.